# pyerr

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
docs/: versions.md
docs/examples/nubar/: read_nubar_cov.ipynb  tape25
docs/examples/pca/: pca_example.ipynb
docs/examples/pfns/: read_pfns_cov.ipynb  tape28
src/pyerr/: __init__.py  _covariance.py  _energy.py  _mean.py  _section.py  errorr.py
src/pyerr/base/: __init__.py  _control.py  _values.py
tests/: control_base_test.py  control_test.py  convergence_test.py  covariance_test.py  energy_test.py  errorr_output_test.py  mean_test.py  section_test.py  values_test.py
tests/files/: nubar_example_matrix.npy  u235_endf71_eigvals.npy  u235_endf71_eigvects.npy  u235_endf81.txt  u235_endf81_matrix.npy  u235_endf81_matrix_30.npy
