[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyerr"
description = "python package to parse ERRORR output files"
readme = "readme.md"
dynamic = ["version"]
dependencies = [
	"numpy",
	"fortranformat",
	"pandas",
	"pyarrow"
]

[tool.setuptools.dynamic]
version = {attr="pyerr.__version__"}

[tools.setuptools.packages.find]
namespaces = true
where = ["src"]


[tool.setuptools]
script-files = []



[tool.pytest.ini_options]
markers = [ 
	"slow: marks tests as slow", 
	"local: marks tests that run on local scripts",
	"fishing: marks tests that run over a lot of files to find edge cases",
	"notready: marks tests to skip while developing one aspect"
]
python_files = "tests/*test.py"
addopts = "-m 'not slow  and not notready and not fishing '"


[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
    /(
        \.git
      | \.hg
      | \.mypy_cache
      | \.tox
      | \.venv
	  | \.vscode
      | _build
      | build
      | dist
    )/
	'''
